--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "little websocket-based game",
   "main": "server/server.js",
   "dependencies": {
+    "express": "^4.13.4",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {},
