--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "liars",
   "version": "1.0.0",
   "description": "little websocket-based game",
-  "main": "server/server.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.13.4",
     "socket.io": "^1.4.5"
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
